# einfuehrung-in-jupyter-notebooks

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  start-jupyterlab.bat  start.bat
.github/workflows/: conda_env_create_ubuntu.yml  conda_env_create_windows.yml
.user-settings/@jupyter-lsp/jupyterlab-lsp/: diagnostics.jupyterlab-settings
00-Installationscheck/: Installationscheck.ipynb
01-Einfuehrung-in-Python/: Einfuehrung in Python.ipynb  Einführung in Python.ipynb
02-Tipps-zu-JupyterLab/: Tipps zu JupyterLab.ipynb
02-Was-kann-ein-Jupyter-Notebook/: Was kann ein Jupyter Notebook.ipynb
03-Tipps-zu-JupyterLab/: Tipps zu JupyterLab.ipynb
03-Visualisieren-von-Wetterdaten/: Visualisieren von Wetterdaten.ipynb  meteostat-10147.csv.metadata.txt
03-Was-kann-ein-Jupyter-Notebook/: Was kann ein Jupyter Notebook.ipynb
04-Visualisieren-von-Wetterdaten/: Visualisieren von Wetterdaten.ipynb  meteostat-10147.csv
04-Visualisierung-von-Geodaten,-Netzwerken-und-3d-Plots/: Visualisierung von Geodaten, Netzwerken und 3d-Plots.ipynb
05-Visualisierung-von-Geodaten,-Netzwerken-und-3d-Plots/: Visualisierung von Geodaten, Netzwerken und 3d-Plots.ipynb
_intern/: Vorbereitung-auf-den-Workshop.tex  make.bat
